<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_admin_home"
        android:title="@string/stats"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_admin_users"
        android:title="@string/users"
        android:icon="@drawable/ic_user"/>

    <item
        android:id="@+id/nav_admin_approval"
        android:title="@string/approvals"
        android:icon="@drawable/ic_approvad"/>

    <item
        android:id="@+id/nav_admin_reports"
        android:title="@string/reports"
        android:icon="@drawable/ic_report"/>

    <item
        android:id="@+id/nav_admin_account"
        android:title="@string/account"
        android:icon="@drawable/ic_account"/>

</menu>
