<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_instructor_home"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_instructor_courses"
        android:title="@string/courses"
        android:icon="@drawable/ic_course" />

    <item
        android:id="@+id/nav_instructor_students"
        android:title="@string/students"
        android:icon="@drawable/ic_user" />

    <item
        android:id="@+id/nav_instructor_revenue"
        android:title="@string/revenue"
        android:icon="@drawable/ic_revenue" />

    <item
        android:id="@+id/nav_instructor_account"
        android:title="@string/account"
        android:icon="@drawable/ic_account" />

</menu>
