<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@color/bg_primary"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/outline_arrow_back_24"
            app:tint="@color/white"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_your_details"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/full_name_hint"
        android:textColorHint="@color/text_hint"
        android:textColor="@color/text_primary"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio_hint"
        android:textColorHint="@color/text_hint"
        android:textColor="@color/text_primary"
        android:inputType="textMultiLine"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save_changes_upper"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/accent_pressed"
        android:textStyle="bold"/>
</LinearLayout>
